--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -55,7 +55,7 @@
         </div>
       {% else %}
         <div class="hidden 2xl:block 2xl:col-start-2">
-          <a href="{{ path('app_blog_new') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Create post</a>
+          <a href="{{ path('app_blog_new') }}" class="2xl:bg-gray-800 2xl:text-center 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-2.5 2xl:py-2 2xl:text-m 2xl:font-medium">Create post</a>
         </div>
         <div class="hidden 2xl:block 2xl:col-start-3">
           <a href="{{ path('app_blog_mine') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">My posts</a>
